Added missing parameters and responses
